[gd_scene load_steps=11 format=3 uid="uid://kskndmkrj3y5"]

[ext_resource type="Texture2D" uid="uid://buqbnxxm1tpu1" path="res://icon.svg" id="1_5kruu"]
[ext_resource type="Script" path="res://characters/enemies/enemy.gd" id="1_v0a4c"]
[ext_resource type="Script" path="res://components/ChaseTarget.gd" id="2_0tabp"]
[ext_resource type="Script" path="res://components/Health.gd" id="3_6xqey"]
[ext_resource type="Script" path="res://components/MoveCharacter.gd" id="3_ssjmx"]
[ext_resource type="Script" path="res://components/Hurtbox.gd" id="5_2cu1l"]
[ext_resource type="Script" path="res://components/Hitbox.gd" id="7_lo86t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78joa"]
size = Vector2(100, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmmrt"]
size = Vector2(120, 120)

[sub_resource type="CircleShape2D" id="CircleShape2D_xv0wa"]
radius = 56.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_v0a4c")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.855246, 0.129513, 2.98411e-06, 1)
position = Vector2(0, -50)
texture = ExtResource("1_5kruu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_78joa")

[node name="Health" type="Node" parent="."]
script = ExtResource("3_6xqey")

[node name="ChaseTarget" type="Node" parent="." node_paths=PackedStringArray("move_node")]
script = ExtResource("2_0tabp")
move_node = NodePath("../MoveCharacter")
chase_update_delay = 1.0

[node name="MoveCharacter" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("3_ssjmx")
character = NodePath("..")
move_speed = 100.0

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("5_2cu1l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -50)
shape = SubResource("RectangleShape2D_fmmrt")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("7_lo86t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -50)
shape = SubResource("CircleShape2D_xv0wa")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="no_health" from="Health" to="." method="_on_health_no_health"]
[connection signal="hurtbox_hit" from="Hurtbox" to="." method="_on_hurtbox_hurtbox_hit"]
[connection signal="hurtbox_hit" from="Hitbox" to="." method="_on_hitbox_hurtbox_hit"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
